--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,15 @@ build/Release
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
+
 node_modules
 
 # Users Environment Variables
 .lock-wscript
+
+public/src/vendor/*
+
+public/node_modules
+
+public/dist/*
+
