--- a/public/package.json
+++ b/public/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-jshint": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-less": "0.5.0-rc7",
     "grunt-hash-url": "~0.1.0",
     "grunt-recess": "~0.4.0"
   },
